[tool.poetry]
name = "adv_attacker"
version = "0.1.0"
description = ""
authors = ["matttrd <matteoterzi.mt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"
torch = "^2.3.1"
torchvision = "^0.18.1"
pillow = "^10.4.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
